WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220061
Missing textInteractionEnabled key in WKPreferences initWithCoder looks like a false value.
https://bugs.webkit.org/show_bug.cgi?id=220061
Summary
Missing textInteractionEnabled key in WKPreferences initWithCoder looks like ...
Kate Cheney
Reported
2020-12-21 10:35:19 PST
We recently added a new API for disabling text interaction in WKWebViews that defaults to true. When initializing a new WKPreferences object with an NSCoder, the key will not exist yet and will look like a false value in the coder, causing text interaction to be disabled.
Attachments
Patch
(1.82 KB, patch)
2020-12-21 10:42 PST
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kate Cheney
Comment 1
2020-12-21 10:35:44 PST
<
rdar://problem/72487342
>
Kate Cheney
Comment 2
2020-12-21 10:42:37 PST
Created
attachment 416609
[details]
Patch
EWS
Comment 3
2020-12-21 11:39:18 PST
Committed
r271032
: <
https://trac.webkit.org/changeset/271032
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 416609
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug