Missing textInteractionEnabled key in WKPreferences initWithCoder looks like a false value. https://bugs.webkit.org/show_bug.cgi?id=220061 <rdar://problem/72487342>

Reviewed by Wenson Hsieh.

We should check for the existence of the textInteractionEnabled key
in the NSCoder before updating the default value in WKPreferences,
otherwise a missing key will register as a false value when the default
of textInteractionEnabled should be true.

* UIProcess/API/Cocoa/WKPreferences.mm:
(-[WKPreferences initWithCoder:]):


Canonical link: https://commits.webkit.org/232632@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271032 268f45cc-cd09-0410-ab3c-d52691b4dbfc